<resources>
    <string name="app_name">SMA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Files">Files</string>
    <string name="Image">Image</string>
    <string name="Thumbnail">Thumbnail</string>
    <string name="Video">Video</string>
    <string name="album_enter_select">Select</string>
    <string name="api_cancel">Cancel</string>
    <string name="album_photo_select_tip">item</string>
    <string name="album_phoot_select_all">Select all</string>
    <string name="album_phoot_unselect_all">Deselect all</string>
    <string name="album_title">My photo albums</string>
    <string name="pgcommon_share">Share</string>
    <string name="common_cut">Move</string>
    <string name="common_delete">Delect</string>
    <string name="common_edit">Edit</string>
    <string name="album_message">Picture&amp;Video</string>
    <string name="smssdk_error_desc_server_busy">服务器繁忙</string>
    <string name="smssdk_error_desc_511">无效请求</string>
    <string name="smssdk_error_desc_512">禁止访问</string>
    <string name="smssdk_error_desc_513">Appkey无效</string>
    <string name="smssdk_error_desc_514">权限不足</string>
    <string name="smssdk_error_desc_515">服务器内部错误</string>
    <string name="smssdk_error_desc_516">非法请求</string>
    <string name="smssdk_error_desc_517">参数缺损</string>
    <string name="smssdk_error_desc_518">非法手机号</string>
    <string name="smssdk_error_desc_519">请求验证超上限</string>
    <string name="smssdk_error_desc_520">验证码错误</string>
    <string name="smssdk_error_desc_521">token无效</string>
    <string name="smssdk_error_desc_522">duid无效</string>
    <string name="smssdk_error_desc_523">已验证</string>
    <string name="smssdk_error_desc_524">请求过于频繁</string>
    <string name="smssdk_error_desc_525">签名无效</string>
    <string name="smssdk_error_desc_526">余额不足</string>
    <string name="smssdk_error_detail_511">客户端请求不能被识别</string>
    <string name="smssdk_error_detail_512">服务器拒绝访问，或者拒绝操作</string>
    <string name="smssdk_error_detail_513">请求Appkey不存在或被禁用</string>
    <string name="smssdk_error_detail_514">无权执行该请求</string>
    <string name="smssdk_error_detail_515">服务器内部错误</string>
    <string name="smssdk_error_detail_516">服务器不支持客户端的请求</string>
    <string name="smssdk_error_detail_517">缺少必要的请求参数</string>
    <string name="smssdk_error_detail_518">请求中用户的手机号格式不正确（包括手机的区号）</string>
    <string name="smssdk_error_detail_519">请求发送验证码次数超出限制（如每日、每APP、单台设备以及运营商等都有各种发送验证码的上限）</string>
    <string name="smssdk_error_detail_520">无效验证码</string>
    <string name="smssdk_error_detail_521">请求的令牌无效或者非法</string>
    <string name="smssdk_error_detail_522">请求的duid非法或者无效</string>
    <string name="smssdk_error_detail_523">请求验证的手机号码已经被验证</string>
    <string name="smssdk_error_detail_524">客户端请求发送短信验证过于频繁</string>
    <string name="smssdk_error_detail_525">需要签名检验</string>
    <string name="smssdk_error_detail_526">余额不足</string>
    <string name="smssdk_back">返回</string>
    <string name="smssdk_regist">使用手机号码注册</string>
    <string name="smssdk_make_sure_country_mobile">请确认你的国家或地区并输入手机号码</string>
    <string name="smssdk_country">国家和地区</string>
    <string name="smssdk_next">下一步</string>
    <string name="smssdk_make_sure_mobile_num">确认手机号码</string>
    <string name="smssdk_cancel">取消</string>
    <string name="smssdk_ok">好</string>
    <string name="smssdk_make_sure_mobile_detail"><Data>我们将发送&lt;font color=#3cac17>验证码&lt;/font>短信到这个号码:</Data></string>
    <string name="smssdk_write_mobile_phone">请填写手机号码</string>
    <string name="smssdk_write_right_mobile_phone">请填写正确的手机号码</string>
    <string name="smssdk_write_identify_code">填写验证码</string>
    <string name="smssdk_send_mobile_detail"><Data>我们已发送&lt;font color=#209526>验证码&lt;/font>短信到这个号码:</Data></string>
    <string name="smssdk_unreceive_identify_code"><Data>&lt;font color=#a8b8cb> 收不到验证码？&lt;/font></Data></string>
    <string name="smssdk_submit">提交</string>
    <string name="smssdk_identify_code">验证码</string>
    <string name="smssdk_receive_msg"><Data>接收短信大约需要&lt;font color=#209526>%s&lt;/font>秒</Data></string>
    <string name="smssdk_resend_identify_code">重新获取验证码</string>
    <string name="smssdk_choose_country">选择国家和地区代码</string>
    <string name="smssdk_network_error">网络异常，请稍后重试</string>
    <string name="smssdk_country_not_support_currently">当前服务暂不支持此国家，请选择其它国家</string>
    <string name="smssdk_search">搜索</string>
    <string name="smssdk_search_contact">好友搜索</string>
    <string name="smssdk_virificaition_code_sent">验证码已发送</string>
    <string name="smssdk_virificaition_code_wrong">验证码不正确，请重新输入</string>
    <string name="smssdk_your_ccount_is_verified">验证成功</string>
    <string name="smssdk_user_info_submited">用户资料已提交</string>
    <string name="smssdk_contacts_in_app">已加入的用戶</string>
    <string name="smssdk_contacts_out_app">待邀请的好友</string>
    <string name="smssdk_invite">邀请</string>
    <string name="smssdk_send_invitation">发送邀请</string>
    <string name="smssdk_not_invite"><Data>&lt;font color=#209526> %s &lt;/font></Data>还未加入</string>
    <string name="smssdk_contacts_detail">详细资料</string>
    <string name="smssdk_contacts_phones">手机号码:</string>
    <string name="smssdk_choice_invite_phones">选择一个号码发送邀请</string>
    <string name="smssdk_invite_content">Mob最新短信SDK,欢迎大家使用，你的好友邀请你加入；下载地址： http://www.mob.com</string>
    <string name="smssdk_close_identify_page_dialog">验证码短信可能略有延迟，确定返回并重新开始？</string>
    <string name="smssdk_wait">等待</string>
    <string name="smssdk_add_contact">添加</string>
    <string name="smssdk_get_verifycode_frequentlly">发送验证码太频繁，请稍后再发！</string>
    <string name="smssdk_get_phone_verifycode_today_frequentlly">很抱歉，该手机号申请验证码次数过多，请明天重试！</string>
    <string name="smssdk_send_sounds_identify_code">确定后将致电您的手机号，语音播报验证码.如不希望被来电打扰请使用短信验证码。</string>
    <string name="smssdk_make_sure_send_sounds">确认发送？</string>
    <string name="smssdk_send_sounds_success">语音验证码发送成功</string>
    <string name="instapager_login_html" formatted="false">&lt;!DOCTYPE html> &lt;html> &lt;head> &lt;meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"> &lt;meta content=\"width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no\" id=\"viewport\" name=\"viewport\"> &lt;meta content=\"yes\" name=\"apple-mobile-web-app-capable\"> &lt;title>%s&lt;/title> &lt;style type=\"text/css\"> body{margin:0;padding:0} .inputstyle { -webkit-tap-highlight-color:rgba(255,255,255,0); width:100%%; height:44px; color:#000; background:0; border:0; font-size:16px; outline: none; -webkit-appearance:none } .btn { width:90%%; height:44px; line-height:44px; background:#A0C035; border:0; border-radius:4px; color:#fff; font-size:16px; text-align:center; margin-top:15px; display:block } .btn:disabled { background: #dddddd; } .error { color:red; } &lt;/style> &lt;/head> &lt;body> &lt;script type=\"text/javascript\"> function login(form){ var u=form[\"u\"].value,p=form[\"p\"].value; if(!u || !p) return false; form[\"s\"].disabled = true; return true; } &lt;/script> &lt;form style=\"margin-top:45px;\" action=\"%s\" metho=\"get\" onsubmit=\"return login(this);\"> %s &lt;div style=\"padding-left:15px;border-top:1px solid #E3E3E5;border-bottom:1px solid #E3E3E5;\"> &lt;input type=\"hidden\" name=\"ID_SIGN\" value=\"OWELJSFPWECSFEW\"/> &lt;input class=\"inputstyle\" id=\"u\" name=\"u\" type=\"text\" value=\"%s\" placeholder=\"%s\" style=\"border-bottom:1px solid #E3E3E5;\"/> &lt;input class=\"inputstyle\" id=\"p\" name=\"p\" type=\"password\" placeholder=\"%s\"/> &lt;/div> &lt;p>&lt;input style=\"margin:0 auto;\" type=\"submit\" name=\"s\" value=\" %s \" class=\"btn\"/>&lt;/p> &lt;/form> &lt;/body> &lt;/html></string>
    <string name="finish">Finish</string>
    <string name="sharing">Sharing operation is working in the background…</string>
    <string name="share_to">Share to</string>
    <string name="share">Share</string>
    <string name="multi_share">Photo Sharing</string>
    <string name="share_completed">Operation succeeded</string>
    <string name="share_canceled">Operation canceled</string>
    <string name="select_one_plat_at_least">Please select a target platform</string>
    <string name="list_friends">Friends on %s</string>
    <string name="share_failed">Operation failed</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="shake2share">Shake your phone!</string>
    <string name="select_a_friend">Please select a friend</string>
    <string name="weibo_oauth_regiseter">Authorization</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">Share Pic</string>
    <string name="wechat_client_inavailable">Wechat client not exists or the version is too low</string>
    <string name="google_plus_client_inavailable">Google+ client not exists or the version is too low</string>
    <string name="qq_client_inavailable">Mobile QQ client not exists or the version is too low</string>
    <string name="pinterest_client_inavailable">Pinterest client not exists or the version is too low</string>
    <string name="instagram_client_inavailable">Instagram client not exists or the version is too low</string>
    <string name="yixin_client_inavailable">Yixin client not exists or the version is too low</string>
    <string name="line_client_inavailable">Line client not exists or the version is too low</string>
    <string name="kakaotalk_client_inavailable">KakaoTalk client not exists or the version is too low</string>
    <string name="kakaostory_client_inavailable">KakaoStory client not exists or the version is too low</string>
    <string name="whatsapp_client_inavailable">WhatsApp client not exists or the version is too low</string>
    <string name="laiwang_client_inavailable">Laiwangs client not exists or the version is too low</string>
    <string name="sinaweibo">Sina Weibo</string>
    <string name="email">Email</string>
    <string name="input_newpsd">password</string>
    <string name="input_repsd">Confirm password</string>
    <string name="pwd">password</string>
    <string name="verfyCode">VerifyCode</string>
    <string name="get_vercode">Get verification code</string>
    <string name="photo">Get from albums</string>
    <string name="take_photo">Take photoes</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Define</string>
    <string name="sun_day">Sun.</string>
    <string name="sta_day">Sat.</string>
    <string name="frid_day">Fri.</string>
    <string name="thur_day">Thur.</string>
    <string name="wes_day">Wed.</string>
    <string name="tues_day">Tues.</string>
    <string name="mon_day">Mon.</string>
    <string name="today">Today</string>
    <string name="week_data">Week</string>
    <string name="alert_msg">If there is a band Sma Watch you sleep last nigh？</string>
    <string name="alert_title">Warm prompt</string>
    <string name="tel_number">Phone number</string>
    <string name="modify_pwd">Modify password</string>
    <string name="tpl_boy">Boy</string>
    <string name="tpl_change_user_name_title">Change Name</string>
    <string name="tpl_input_user_name_hint">Input User Name</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_qzone">Login With Qzone</string>
    <string name="login_with_weixin">Login With WeiXin</string>
    <string name="login_with_sina_weibo">Login With SinaWeiBo</string>
    <string name="put_on">Yes</string>
    <string name="not_put_on">No</string>
    <string name="china">China</string>
    <string name="country">Country</string>
    <string name="rate_details">Details Data</string>
    <string name="immediately_rate">Heart Rate</string>
    <string name="heart_time">Time</string>
    <string name="heart_month">Month</string>
    <string name="sport_track_delete">Do you want to delete ?</string>
</resources>