<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/transparent" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textColor="@android:color/black" android:gravity="center" android:id="@id/take_photo" android:background="@drawable/register_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/take_photo" />
        <Button android:textColor="@android:color/black" android:gravity="center" android:id="@id/photo" android:background="@drawable/register_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/photo" />
        <Button android:textColor="@android:color/black" android:gravity="center" android:id="@id/cancel_btn" android:background="@drawable/register_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>