<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/page_back" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="48.0dip" android:textStyle="bold" android:textColor="@color/logo_text_color" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="60.0dip" android:text="@string/share_sdk" android:singleLine="true" android:drawableLeft="@drawable/ic_launcher" android:drawablePadding="10.0dip" />
            <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tvQq" android:background="@drawable/qq_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/login_with_qzone" android:singleLine="true" />
            <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tvWeibo" android:background="@drawable/weibo_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/login_with_sina_weibo" android:singleLine="true" />
            <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tvWeixin" android:background="@drawable/wechat_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/login_with_weixin" android:singleLine="true" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>