<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center|top" android:id="@id/header_layout" android:background="@drawable/heart_tittle_bg" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/back_btn" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/back_btn" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/back_btn_style" />
        <TextView android:textSize="20.0dip" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_details" android:layout_centerInParent="true" />
        <ImageButton android:id="@id/btn_share" android:background="@null" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/share_selector" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/heart_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/detail_tab_bg" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_weight="0.0">
            <Button android:textColor="@android:color/white" android:gravity="center" android:id="@id/heart_today_btn" android:background="@drawable/heart_tod_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/today" android:layout_weight="1.0" />
            <Button android:textColor="@android:color/white" android:gravity="center" android:id="@id/heart_week_btn" android:background="@drawable/heart_wek_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:text="@string/week_data" android:layout_weight="1.0" />
            <Button android:textColor="@android:color/white" android:gravity="center" android:id="@id/heart_month_btn" android:background="@drawable/heart_month_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/heart_month" android:layout_weight="1.0" />
        </LinearLayout>
        <com.github.mikephil.charting.charts.LineChart android:layout_gravity="center_horizontal" android:id="@id/spread_line_chart" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:background="@drawable/heart_type_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/heart_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="@string/heart_time" />
        <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/heart_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:text="@string/immediately_rate" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ListView android:id="@id/heart_detail_listview" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cacheColorHint="@android:color/transparent" android:divider="#00000000" android:dividerHeight="0.0dip" />
</LinearLayout>