<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="#ff22292c" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/dialog_tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tpl_change_user_name_title" android:layout_centerVertical="true" />
        <Button android:id="@id/dialog_btn_save" android:background="@drawable/checked" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <EditText android:textSize="15.0sp" android:textColor="#ff353535" android:id="@id/dialog_ev_info" android:background="@drawable/et_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="15.0dip" android:text="@string/tpl_boy" android:singleLine="true" android:maxLength="30" />
    <TextView android:textSize="13.0sp" android:textColor="#ffaaaaaa" android:id="@id/dialog_tv_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="20.0dip" android:text="@string/tpl_input_user_name_hint" />
</LinearLayout>